--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/vuelidate": "^0.7.15",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
