--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@smartweb/vue-flash-message": "^0.6.10",
     "@types/vuelidate": "^0.7.15",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
