--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
+    "date-fns": "^2.29.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuelidate": "^0.7.7",
